--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
                 </ol>
             </div>
     </div>
-
-
-    
-    </div> -->
+    </div>
     <script src="style.js"></script>
 </body>
 </html>
