--- a/index.html
+++ b/index.html
@@ -8,20 +8,28 @@
 </head>
 <body>
 
-    <h1 id="title">MILLIONAIRE</h1>
+    <h1>MILLIONAIRE</h1>
 
-    <div id="quiz-container ">
+    <div id="quiz-container">
         <div class="questions">
             <h2 id="question"></h2>
                 <ol type="A">
-                    <li class="option"><span id="option0" onclick="calcScore(this)"></span></li>
-                    <li class="option"><span id="option1" onclick="calcScore(this)"></span></li>
-                    <li class="option"><span id="option2" onclick="calcScore(this)"></span></li>
-                    <li class="option"><span id="option3" onclick="calcScore(this)"></span></li>
+                    <li class="option">
+                        <span id="option0" onclick="calcScore(this)"></span>
+                    </li>
+                    <li class="option">
+                        <span id="option1" onclick="calcScore(this)"></span>
+                    </li>
+                    <li class="option">
+                        <span id="option2" onclick="calcScore(this)"></span>
+                    </li>
+                    <li class="option">
+                        <span id="option3" onclick="calcScore(this)"></span>
+                    </li>
                 </ol>
-            </div>
-    </div>
-    </div>
+                <button onclick="fifty()">50/50</button>
+         </div>
+    </div> 
     <script src="style.js"></script>
 </body>
 </html>
