--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 
     <div class="quiz-container">
         <div class="questions">
-            <h2 id="question"></h2>
-                <ol type="A">
+            <h2 id="question" class="text-white fs-1"></h2>
+                <ol type="A" class="">
                     <li class="option">
-                        <span id="option0" onclick="calcScore(this)"></span>
+                        <button class="w-50" id="option0" onclick="calcScore(this)"></button>
                     </li>
                     <li class="option">
-                        <span id="option1" onclick="calcScore(this)"></span>
+                        <button class="w-50" id="option1" onclick="calcScore(this)"></button>
                     </li>
                     <li class="option">
-                        <span id="option2" onclick="calcScore(this)"></span>
+                        <button class="w-50" id="option2" onclick="calcScore(this)"></button>
                     </li>
                     <li class="option">
-                        <span id="option3" onclick="calcScore(this)"></span>
+                        <button class="w-50" id="option3" onclick="calcScore(this)"></button>
                     </li>
                 </ol>
                 <button onclick="fifty()">50/50</button>
