changed span to button

--- a/index.html
+++ b/index.html
@@ -15,18 +15,19 @@
     <div class="quiz-container">
         <div class="questions">
             <h2 id="question" class="text-white fs-1"></h2>
-                <ol type="A" class="">
-                    <li class="option">
-                        <button class="w-50" id="option0" onclick="calcScore(this)"></button>
+                <ol type="A" class="text-white row m-auto">
+
+                     <li class="option col-6 mb-4">
+                        <button class=" btn span text-white" id="option0" onclick="calcScore(this)"></button>
+                     </li>
+                     <li class="option col-6 mb-4">
+                        <button class=" btn span text-white" id="option1" onclick="calcScore(this)"></button>
                     </li>
-                    <li class="option">
-                        <button class="w-50" id="option1" onclick="calcScore(this)"></button>
+                    <li class="option col-6">
+                        <button class=" btn span text-white" id="option2" onclick="calcScore(this)"></button>
                     </li>
-                    <li class="option">
-                        <button class="w-50" id="option2" onclick="calcScore(this)"></button>
-                    </li>
-                    <li class="option">
-                        <button class="w-50" id="option3" onclick="calcScore(this)"></button>
+                    <li class="option col-6">
+                        <button class="bt span text-white" id="option3" onclick="calcScore(this)"></button>
                     </li>
                 </ol>
                 <button onclick="fifty()">50/50</button>
