--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 
     <div class="quiz-container">
         <div class="questions">
-            <h2 id="question" class="text-white fs-1"></h2>
+            <h2 id="question" class="text-white fs-1 rounded-pill"></h2>
                 <ol type="A" class="text-white row m-auto">
 
                      <li class="option col-6 mb-4">
-                        <button class=" btn span text-white" id="option0" onclick="calcScore(this)"></button>
+                        <button class=" btn span text-white fs-3 fw-bold" id="option0" onclick="calcScore(this)"></button>
                      </li>
                      <li class="option col-6 mb-4">
-                        <button class=" btn span text-white" id="option1" onclick="calcScore(this)"></button>
+                        <button class=" btn span text-white fs-3 fw-bold" id="option1" onclick="calcScore(this)"></button>
                     </li>
                     <li class="option col-6">
-                        <button class=" btn span text-white" id="option2" onclick="calcScore(this)"></button>
+                        <button class=" btn span text-white fs-3 fw-bold" id="option2" onclick="calcScore(this)"></button>
                     </li>
                     <li class="option col-6">
-                        <button class="bt span text-white" id="option3" onclick="calcScore(this)"></button>
+                        <button class="bt span text-white fs-3 fw-bold" id="option3" onclick="calcScore(this)"></button>
                     </li>
                 </ol>
                 <button onclick="fifty()">50/50</button>
