--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
 
     <h1>MILLIONAIRE</h1>
-
+    <button onclick="fifty()" id="btn"><img src="50-50.png" alt=""></button>
     <div class="quiz-container">
         <div class="questions">
             <h2 id="question" class="text-white fs-1 rounded-pill"></h2>
-                <ol type="A" class="text-white row m-auto">
+                <ol type="A" class="text-white row m-auto fw-bold fs-4">
 
                      <li class="option col-6 mb-4">
                         <button class=" btn span text-white fs-3 fw-bold" id="option0" onclick="calcScore(this)"></button>
@@ -30,8 +30,8 @@
                         <button class="bt span text-white fs-3 fw-bold" id="option3" onclick="calcScore(this)"></button>
                     </li>
                 </ol>
-                <button onclick="fifty()">50/50</button>
-         </div>
+            </div>
+            
     </div> 
     <script src="style.js"></script>
 </body>
