--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
                 <ol type="A" class="text-white row m-auto fw-bold fs-4">
 
                      <li class="option col-6 mb-4">
-                        <button class=" btn span text-white fs-3 fw-bold" id="option0" onclick="calcScore(this)"></button>
+                        <button class=" btn span text-white fs-3 fw-bold" id="option0" onclick="checkAnswer(this)"></button>
                      </li>
                      <li class="option col-6 mb-4">
-                        <button class=" btn span text-white fs-3 fw-bold" id="option1" onclick="calcScore(this)"></button>
+                        <button class=" btn span text-white fs-3 fw-bold" id="option1" onclick="checkAnswer(this)"></button>
                     </li>
                     <li class="option col-6">
-                        <button class=" btn span text-white fs-3 fw-bold" id="option2" onclick="calcScore(this)"></button>
+                        <button class=" btn span text-white fs-3 fw-bold" id="option2" onclick="checkAnswer(this)"></button>
                     </li>
                     <li class="option col-6">
-                        <button class="bt span text-white fs-3 fw-bold" id="option3" onclick="calcScore(this)"></button>
+                        <button class="btn span text-white fs-3 fw-bold" id="option3" onclick="checkAnswer(this)"></button>
                     </li>
                 </ol>
             </div>
