--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <!-- <h1>MILLIONAIRE</h1> -->
-    <button onclick="fifty()" id="btn" class="ms-5 mt-5"><img src="50-50.png" alt=""></button>
+    <button onclick="fifty()" id="btn" class="ms-5 mt-5"><img src="./images/50-50.png" alt=""></button>
     <div class="quiz-container">
         <div class="questions">
             <h2 id="question" class="text-white fs-1 rounded-pill"></h2>
