added money image

--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
 
     <!-- <h1>MILLIONAIRE</h1> -->
     <button onclick="fifty()" id="btn" class="ms-5 mt-5"><img src="./images/50-50.png" alt=""></button>
+    <div class="money-won">
+        <ul>
+          <li class="white">10 $32 000</li>
+          <li class="other">9 $16 000</li>
+          <li class="other">8 $8 000</li>
+          <li class="other">7 $4 000</li>
+          <li class="other">6 $2 000</li>
+          <li class="white">5 $1 000</li>
+          <li class="other">4 $500</li>
+          <li class="other">3 $300</li>
+          <li class="other">2 $200</li>
+          <li class="active">1 $100</li>
+        </ul>
+      </div>
+
+
     <div class="quiz-container">
         <div class="questions">
             <h2 id="question" class="text-white fs-1 rounded-pill"></h2>
