--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
 
     <!-- <h1>MILLIONAIRE</h1> -->
-    <div class="money">
-        <button onclick="fifty()" id="btn" class="ms-5 mt-5"><img src="./images/50-50.png" alt=""></button><br>
-        <img src="./images/money-removebg-preview.png" height="200" alt="">
-    </div>
+    <button onclick="fifty()" id="btn" class="ms-5 mt-5"><img src="./images/50-50.png" alt=""></button>
+    <!-- <div>
+        <img src="./images/money-removebg-preview.png" class="money" alt="">
+    </div> -->
     <div class="quiz-container">
         <div class="questions">
             <h2 id="question" class="text-white fs-1 rounded-pill"></h2>
