--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
 
    
-    <div>
+    <div class="image-div">
         <button onclick="fifty()" id="btn" class="ms-5 mt-5"><img src="./images/50-50.png" alt=""></button>
         <span><img src="./images/phone-a-friend.png" alt=""></span>
         <span><img src="./images/ask-the-audience.png" alt=""></span>
-        <p><img src="./images/money-removebg-preview.png" alt=""></p>
+        <p><img class="money-image" src="./images/money-removebg-preview.png" alt=""></p>
     </div>
 
     <div class="quiz-container">
