--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
    
     <div class="image-div">
         <button onclick="fifty()" id="btn" class="ms-5 mt-5"><img src="./images/50-50.png" alt=""></button>
-        <span><img src="./images/phone-a-friend.png" alt=""></span>
+        <span onclick="phoneAfriend()" id="friendImg"><img src="./images/phone-a-friend.png" alt=""></span>
         <span><img src="./images/ask-the-audience.png" alt=""></span>
-        <p><img class="money-image mt-3" src="./images/money-removebg-preview.png" alt=""></p>
+        <span ><img class="money-image mt-3" src="./images/money-removebg-preview.png" alt=""></span>
     </div>
-
+        <!-- <div id="display"></div> -->
     <div class="quiz-container">
         <div class="questions">
             <h2 id="question" class="text-white fs-1 rounded-pill"></h2>
@@ -42,59 +42,3 @@
     <script src="style.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- score -->
-    <!-- <div id="scoreboard">
-        <h2 id="score-title">Your score</h2>
-        <h2 id="score"></h2>
-        <button type="button" id="score-btn" onclick="backToQuiz()">Back to quiz</button>
-        <button type="button" id="check-answer" onclick="checkAnswer()">Check answers</button>
-    </div> -->
-
-    <!-- answers -->
-    <!-- <div id="answerBank">
-        <h2>Answers:</h2>
-        <ol type="1" id="answers">
-
-        </ol>
-        <button type="button" id="score-btn" onclick="backToQuiz()">Back to quiz</button>
