added ask the audience function

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="image-div">
         <button onclick="fifty()" id="btn" class="ms-5 mt-5"><img src="./images/50-50.png" alt=""></button>
         <span onclick="phoneAfriend()" id="friendImg"><img src="./images/phone-a-friend.png" alt=""></span>
-        <span><img src="./images/ask-the-audience.png" alt=""></span>
-        <span ><img class="money-image mt-3" src="./images/money-removebg-preview.png" alt=""></span>
+        <span onclick="audience()" id="Audience"><img src="./images/ask-the-audience.png" alt=""></span>
+        <span><img class="money-image mt-3" src="./images/money-removebg-preview.png" alt=""></span>
     </div>
         <!-- <div id="display"></div> -->
     <div class="quiz-container">
