added button color

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="bootstrap-5.2.0-beta1-dist/css/bootstrap.css">
 </head>
 <body class="body">
-    <button></button>
+    <center>
+        <div>
+            <button class="btn fs-1 fw-bold STARTED text-white" onclick="started()">LET'S GET STARTED</button>
+        </div>
+    </center>
+    <script src="style.js"></script>
 </body>
 </html>
