--- a/game.html
+++ b/game.html
@@ -8,20 +8,19 @@
     <link rel="stylesheet" href="bootstrap-5.2.0-beta1-dist/css/bootstrap.css">
     <title>Document</title>
 </head>
-<body>
+<body onload="playSong()">
 
-   
     <div class="image-div">
         <button onclick="fifty()" id="btn" class="ms-5 mt-5"><img src="./images/50-50.png" alt=""></button>
         <span onclick="phoneAfriend()" id="friendImg"><img src="./images/phone-a-friend.png" alt=""></span>
         <span onclick="audience()" id="Audience"><img src="./images/ask-the-audience.png" alt=""></span>
         <span><img class="money-image mt-3" src="./images/money-removebg-preview.png" alt=""></span>
     </div>
-        <!-- <div id="display"></div> -->
+        <div id="display" class="rounded-pill fs-3 fw-bold text-center ms-5">Amount</div>
     <div class="quiz-container">
         <div class="questions">
             <h2 id="question" class="text-white fs-1 rounded-pill"></h2>
-                <ol type="A" class="text-white row m-auto fw-bold fs-4">
+                <ol type="A" class="text-white row m-auto fw-bold fs-4 ms-5">
 
                      <li class="option col-6 mb-4" id="option">
                         <button class=" btn span text-white fs-3 fw-bold" id="option0" onclick="checkAnswer(this)"></button>
