--- a/game.html
+++ b/game.html
@@ -23,16 +23,16 @@
                 <ol type="A" class="text-white row m-auto fw-bold fs-4 ms-lg-5">
 
                      <li class="option col-lg-6 col-sm-12 mb-4" id="option">
-                        <button class=" btn span text-white fs-3 fw-bold" id="option0" onclick="checkAnswer(this)"></button>
+                        <button class=" btn span text-white fs-3 fw-bold rounded-pill" id="option0" onclick="checkAnswer(this)"></button>
                      </li>
                      <li class="option col-lg-6 col-sm-12 mb-4">
-                        <button class=" btn span text-white fs-3 fw-bold" id="option1" onclick="checkAnswer(this)"></button>
+                        <button class=" btn span text-white fs-3 fw-bold rounded-pill" id="option1" onclick="checkAnswer(this)"></button>
                     </li>
                     <li class="option col-lg-6 col-sm-12 mb-4">
-                        <button class=" btn span text-white fs-3 fw-bold" id="option2" onclick="checkAnswer(this)"></button>
+                        <button class=" btn span text-white fs-3 fw-bold rounded-pill" id="option2" onclick="checkAnswer(this)"></button>
                     </li>
                     <li class="option col-lg-6 col-sm-12">
-                        <button class="btn span text-white fs-3 fw-bold" id="option3" onclick="checkAnswer(this)"></button>
+                        <button class="btn span text-white fs-3 fw-bold rounded-pill" id="option3" onclick="checkAnswer(this)"></button>
                     </li>
                 </ol>
             </div>
