--- a/game.html
+++ b/game.html
@@ -16,9 +16,9 @@
         <span onclick="audience()" id="Audience"><img src="./images/ask-the-audience.png" alt=""></span>
         <span><img class="money-image mt-3 d-none d-sm-block" src="./images/money-removebg-preview.png" alt=""></span>
     </div>
-        <div class="">
+        <div class="d-flex">
             <div id="display" class="rounded-pill fs-3 fw-bold text-center ms-lg-5">Amount</div>
-            <span class="walk-away bg-danger" onclick="walkAway()">Walk away</span>
+            <span class="walk-away bg-danger rounded-pill fs-5 text-white fw-bold text-center btn" onclick="walkAway()">Walk away</span>
         </div>
     <div class="quiz-container">
         <div class="questions">
