--- a/game.html
+++ b/game.html
@@ -18,7 +18,7 @@
     </div>
         <div class="d-flex">
             <div id="display" class="rounded-pill fs-3 fw-bold text-center ms-lg-5">Amount</div>
-            <span class="walk-away bg-danger rounded-pill fs-5 text-white fw-bold text-center btn" onclick="walkAway()">Walk away</span>
+            <span class="walk-away rounded-pill fs-5 text-white fw-bold text-center btn" onclick="walkAway()">Walk away</span>
         </div>
     <div class="quiz-container">
         <div class="questions">
