--- a/gameover.html
+++ b/gameover.html
@@ -9,7 +9,11 @@
     <title>Document</title>
 </head>
 <body class="game-over">
-    <h1>game over</h1>
+   <center>
+    <div>
+        <h1 class="text-light">GAME OVER</h1>
+    </div>
+   </center>
 
     <script src="style.js"></script>
 </body>
