arranged my work

--- a/gameover.html
+++ b/gameover.html
@@ -10,7 +10,7 @@
 </head>
 <body class="game-over">
    <center>
-    <div>
+    <div class="overlay">
         <h1 class="text-light">GAME OVER</h1>
     </div>
    </center>
