--- a/gameover.html
+++ b/gameover.html
@@ -10,8 +10,8 @@
 </head>
 <body class="game-over">
    <center>
-    <div class="overlay">
-        <h1 class="text-light">GAME OVER</h1>
+    <div class="overlay" id="overLay">
+        <h1 class="text-light text">GAME OVER</h1>
     </div>
    </center>
 
