added game over background

--- a/gameover.html
+++ b/gameover.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body class="game-over">
+<body class="game-over" onload="gameOver()">
    <center>
-    <div class="overlay" id="overLay">
-        <h1 class="text-light text">GAME OVER</h1>
+    <div id="overLay">
+        <!-- <h1 class="text-light text">GAME OVER</h1> -->
     </div>
+    
    </center>
 
     <script src="style.js"></script>
