--- a/gameover.html
+++ b/gameover.html
@@ -10,9 +10,7 @@
 </head>
 <body class="game-over" onload="gameOver()">
    <center>
-    <div id="overLay">
-        <!-- <h1 class="text-light text">GAME OVER</h1> -->
-    </div>
+    <div id="overLay"></div>
     
    </center>
 
