added restart function

--- a/over.html
+++ b/over.html
@@ -13,6 +13,7 @@
     <center>
         <div class="overlay">
             <h1 class="text-light text1">GAME OVER</h1>
+            <img class="restart-img" onclick="restart()" src="./images/restart-removebg-preview.png" height="80px" alt="">
         </div>
 
     </center>
