--- a/game.html
+++ b/game.html
@@ -25,13 +25,13 @@
             <h2 id="question" class="text-white  rounded-pill"></h2>
                 <ol type="A" class="text-white row m-auto fw-bold fs-4 ms-lg-5">
 
-                     <li class="option col-lg-6 col-sm-12 mb-4" id="option">
+                     <li class="option col-lg-6 col-sm-12 mb" id="option">
                         <button class=" btn span text-white fw-bold rounded-pill" id="option0" onclick="checkAnswer(this)"></button>
                      </li>
-                     <li class="option col-lg-6 col-sm-12 mb-4">
+                     <li class="option col-lg-6 col-sm-12 mb">
                         <button class=" btn span text-white fw-bold rounded-pill" id="option1" onclick="checkAnswer(this)"></button>
                     </li>
-                    <li class="option col-lg-6 col-sm-12 mb-4">
+                    <li class="option col-lg-6 col-sm-12 mb">
                         <button class=" btn span text-white fw-bold rounded-pill" id="option2" onclick="checkAnswer(this)"></button>
                     </li>
                     <li class="option col-lg-6 col-sm-12">
