--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="body">
     <center>
         <div>
-            <button class="btn fs-1 fw-bold STARTED text-white" onclick="started()">LET'S GET START</button>
+            <button class="btn fs-1 fw-bold STARTED text-white" onclick="started()">LET'S GET STARTED</button>
         </div>
     </center>
     <script src="style.js"></script>
